# networksim

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  registries.yaml
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  debug_status.rs  networksim.db.backup  openapi.json  openapi_postman_collection.json  openapi_route_coverage.csv  openapi_route_coverage.json  schemathesis_report.txt
backend/benches/: benchmarks.rs
backend/migrations/: 001_initial.sql  002_chaos_conditions_v2.sql  002_metrics_events.sql  002_scenarios.sql  003_applications_table.sql  003_registry_config.sql  004_applications_topology_deployment.sql  004_new_chaos_presets.sql  005_fix_applications_schema.sql
backend/scripts/: run_schemathesis.sh
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/api/: applications.rs  chaos.rs  deploy.rs  diagnostic.rs  events.rs  health.rs  live_metrics.rs  metrics.rs  mod.rs  openapi.rs  presets.rs  registry.rs  reports.rs  response.rs  scenarios.rs  templates.rs  test_runner.rs  topologies.rs  volumes.rs  ws.rs
backend/src/chaos/: client.rs  conditions.rs  mod.rs  types.rs
backend/src/db/: mod.rs
backend/src/helm/: client.rs  client.rs.backup  mod.rs  types.rs
backend/src/k8s/: client.rs  deployment.rs  mod.rs  resources.rs  watcher.rs
backend/src/models/: application.rs  mod.rs  scenarios.rs  topology.rs
backend/tests/: api_test.rs  chaos_api_test.rs  chaos_test.rs  models_test.rs  test_schemathesis_contract.py
backend/tools/: generate_route_doc_map.py  requirements.txt
docs/: API_TEST_PLAN.md  IMPLEMENTATION_PLAN.md  REQUIREMENTS.md  STACK.md  openapi_missing_by_module.md  openapi_missing_routes.md
frontend/: .eslintrc.cjs  Dockerfile  Dockerfile.dev  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
scripts/: chaos-validation.sh  check-pods.sh  check.sh  generate-certs.sh  network-diagnostic.sh  setup-registry.sh  setup.sh  smoke-test.sh  start-prod.sh  (+1 more)
testdistributed_app/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.runtime  README.md  build_and_push.sh  docker-compose.yml
testdistributed_app/benchmarks/: convergence_times.csv
testdistributed_app/scripts/: compose_benchmark.sh  integration_compose.sh  integration_compose_logs.sh  integration_docker.sh  integration_test.sh
testdistributed_app/src/: behaviour.rs  http.rs  main.rs  state.rs
(+125 files in other folders)
