[package]
name = "networksim-backend"
version = "0.1.0"
edition = "2021"
description = "Backend API for NetworkSim - Network Topology Simulator"
authors = ["NetworkSim Team"]
default-run = "networksim-backend"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }

# Kubernetes
kube = { version = "0.87", features = ["runtime", "derive", "ws"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.25", features = ["derive"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
config = "0.14"
dotenvy = "0.15"

# API Documentation
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Command execution
tokio-process = "0.2"
async-process = "1.7"

# WebSocket
tokio-tungstenite = "0.21"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
testcontainers = "0.15"
criterion = "0.5"
reqwest = { version = "0.11", features = ["json"] }

[[bench]]
name = "benchmarks"
harness = false
