[package]
name = "testdistributed_app"
version = "0.1.0"
edition = "2021"
authors = ["networksim"]

[dependencies]
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.52.4", features = ["tcp", "dns", "websocket", "mdns", "gossipsub", "kad", "identify", "noise", "yamux", "macros", "tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }